Bug 99064 - quanta: crashes when selecting multiple things in cervisia
Summary: quanta: crashes when selecting multiple things in cervisia
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-02-10 22:23 UTC by Ben Burton
Modified: 2005-02-16 21:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Burton 2005-02-10 22:23:02 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    Debian testing/unstable Packages
OS:                Linux

(Received through the debian BTS as #264817.)

Hi.  I received the following report from a debian user.  I can reproduce the crash myself using the steps described.  Note that it only crashes when using cervisia within quanta -- when I run cervisia as a standalone application there is no problem.

The original report is as follows:

Quanta crashes when selecting multiple things in embedded Cervisia.

How to reproduce:

Start embedded Cervisia in Quanta.
Click a file.
Go down with the keyboard.
Press Ctrl-Space.
Quanta will crash.
Comment 1 András Manţia 2005-02-16 21:36:26 UTC
CVS commit by amantia: 

Don't crash when pressing CTRL+[SHIFT]+SPACE while a plugin is loaded.

BUG: 99064


  M +2 -0      ChangeLog   1.359
  M +2 -2      src/quanta.cpp   1.701


--- kdewebdev/quanta/ChangeLog  #1.358:1.359
@@ -60,4 +60,6 @@
         - don't crash in case of corrupted quantarc
         - avoid crashes that happen if you close Quanta quickly after it is started
+        - don't crash when pressing CTRL+[SHIFT]+SPACE while a plugin is loaded [#99064]
+
 
   - behavioral/user interface changes:

--- kdewebdev/quanta/src/quanta.cpp  #1.700:1.701
@@ -2982,5 +2982,5 @@ void QuantaApp::slotShowCompletion()
 {
   Document *w = ViewManager::ref()->activeDocument();
-  if (w->codeCompletionIf)
+  if (w && w->codeCompletionIf)
     w->codeCompletionRequested();
 }
@@ -2989,5 +2989,5 @@ void QuantaApp::slotShowCompletionHint()
 {
   Document *w = ViewManager::ref()->activeDocument();
-  if (w->codeCompletionIf)
+  if (w && w->codeCompletionIf)
     w->codeCompletionHintRequested();
 }