Don't crash when pressing CTRL+[SHIFT]+SPACE while a plugin is loaded.

BUG: 99064